--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.1.0",
     "husky": "^4.3.5",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
